add profile modal, -chnage routes to make modular, -add profile create when user is created
